--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7124,8 +7124,8 @@ a.text-dark:hover, a.text-dark:focus {
         color: inherit;
         border-color: #dee2e6; } }
 .navbar-design{
-    /*background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(4, 219, 198));*/
-    background-color: #07f8e7;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(4, 219, 198));
+    /*background-color: #07f8e7;*/
     background-position: left top;
     background-size: 150rem;
     background-repeat: repeat;
@@ -7135,4 +7135,8 @@ a.text-dark:hover, a.text-dark:focus {
 .headline{
     font-weight: bolder;
     padding-left: 5em;
+}
+.text-footer{
+    font-weight: bolder;
+    font-size: larger;
 }
