--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7130,13 +7130,32 @@ a.text-dark:hover, a.text-dark:focus {
     background-size: 150rem;
     background-repeat: repeat;
     font-weight: bolder;
-    font-size: large;
+    font-size: xx-large;
+    padding-top: 7em;
+    font-family: "Dancing Script";
 }
 .headline{
     font-weight: bolder;
     padding-left: 5em;
+    font-family: "Dancing Script";
+    font-size: xx-large;
 }
 .text-footer{
     font-weight: bolder;
-    font-size: larger;
+    font-size: x-large;
+}
+
+.signup{
+    width: 10em;
+    height: 5em;
+}
+.nav-pos{
+    margin: auto auto auto 3em;
+}
+.signup-text{
+    font-size: xx-large;
+    font-weight: bolder;
+}
+.logo-pos{
+    margin-left: 1em;
 }
