--- a/src/components/welcome.css
+++ b/src/components/welcome.css
@@ -4,6 +4,11 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+@font-face{
+    font-family:'Headline', cursive;
+        @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
+}
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
