--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ url('Yellowtail-Regular.ttf') format('truetpe'); }
 h1{
   font-family: meine-schrift;
 }
+.heading{
+  font-family: 'Dancing Script';
+  font-size: 30px;
+  font-weight: bolder;
+}
