--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -7140,18 +7140,23 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .left{
-    height:5em;
-    min-height: 3em;
-    max-height: 7em;
+    height:8em;
+    min-height: 6em;
+    max-height: 10em;
     font-size: large;
 }
 .right{
-    height:5em;
-    min-height: 3em;
-    max-height: 7em;
+    height:8em;
+    min-height: 6em;
+    max-height: 10em;
     font-size: large;
 }
 .submit{
     padding-left: 20em;
 
+}
+.error {
+    color:#db2269;
+    font-size: 0.8em;
+    display: relative;
 }
