--- a/src/components/Assignments.css
+++ b/src/components/Assignments.css
@@ -12,8 +12,8 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
   }
-  .App {
-    text-align: center;
+  .Assignments {
+    text-align: left;
   }
   body{
     background-color: #fbf7ff;
@@ -56,8 +56,8 @@ body {
   }
   .item-block{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
   }
   
   .item .Button{
@@ -75,11 +75,13 @@ body {
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   }
   .item .Button.delete:hover{
+    
     background-color: #e44269;
     box-shadow: 0px 15px 20px rgba(228, 66, 105, 0.86);
   }
   
   .item-name{
+    text-align: left;
     margin: 10px;
     font-size: 20px;
   }
