--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -7152,6 +7152,13 @@ a.text-dark:hover, a.text-dark:focus {
     max-height: 10em;
     font-size: large;
 }
+.lefttodo{
+    height:10em;
+    min-height: 6em;
+    max-height: 15em;
+    font-size: large;
+    margin-top: -5em;
+}
 .right{
     height:8em;
     min-height: 6em;
@@ -7217,7 +7224,18 @@ Button:hover{
     font-weight: bolder;
     font-family: "Dancing Script";
 }
+.buttonrefresh{
+    font-size: x-large;
+    font-weight: bolder;
+    font-family: "Dancing Script";
+}
 .responsive{
     max-width: 30em;
     heigt: auto
+}
+.tableheader{
+    font-size: large;
+}
+.tablebody{
+    font-size: medium;
 }
