design timetable not finished

--- a/src/components/timttable.css
+++ b/src/components/timttable.css
@@ -7155,7 +7155,7 @@ a.text-dark:hover, a.text-dark:focus {
     height:15em;
     font-size: medium;
     width: 20em;
-    margin-left: -10em;
+    /*margin-left: -10em;*/
     margin-right: 10em;
 }
 .submit{
@@ -7166,5 +7166,63 @@ a.text-dark:hover, a.text-dark:focus {
     padding-top: 5em;
 }
 .picker{
+    margin-top: -5em;
+}
+.Buttonsubmit{
+    border-radius: 50%;
+    width: 10em;
+    height: 5em;
+    cursor: pointer;
+    background-color: #8f48d2;
+    border: none;
+    margin: 0 2px;
+    box-shadow: 3px 8px 11px -3px rgb(140, 38, 230);
+    color: aliceblue;
+}
+.Button:focus{
+    outline: none;
+}
+
+Button:hover{
+    background-color: #7712d6;
+    box-shadow: 0px 15px 20px rgb(109, 5, 201);
+    transform: translateY(-4px);
+    transition: all .1s linear;
+}
+
+.input{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+.add-input{
+    height: 40px;
+    border-radius: 30px;
+    font-size: 20px;
+    padding: 0 10px;
+    border: 2px solid #c7a7e4;
+    box-shadow: 11px 5px 9px 1px rgba(109, 5, 201, 0.25);
+}
+
+.add-input:focus{
+    outline: none;
+    border: 1px solid #b06eee;
+    transition: all .1s linear;
+}
+.pos-cent{
+    text-align: -moz-center;
+}
+.leftlogin{
+    height:10em;
+    min-height: 6em;
+    max-height: 15em;
+    font-size: large;
+    margin-top: 5em;
+}
+.lefttodo{
+    height:10em;
+    min-height: 6em;
+    max-height: 15em;
+    font-size: large;
     margin-top: -5em;
 }
