--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -7127,12 +7127,13 @@ a.text-dark:hover, a.text-dark:focus {
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(4, 219, 198));
     /*background-color: #07f8e7;*/
     background-position: left top;
-    background-size: 150rem;
+    /*background-size: 50rem;*/
     background-repeat: repeat;
     font-weight: bolder;
     font-size: xx-large;
-    padding-top: 7em;
+    /*padding-top: 7em;*/
     font-family: "Dancing Script";
+    heigt:8em;
 }
 .headline{
     font-weight: bolder;
@@ -7150,7 +7151,7 @@ a.text-dark:hover, a.text-dark:focus {
     height: 5em;
 }
 .nav-pos{
-    margin: auto auto auto auto;
+    margin: auto auto auto 3em;
 }
 .signup-text{
     font-size: xx-large;
@@ -7158,4 +7159,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 .logo-pos{
     margin-left: 1em;
+}
+.headername{
+    margin-left: -5em;
 }
