--- a/src/components/timttable.css
+++ b/src/components/timttable.css
@@ -7168,7 +7168,7 @@ a.text-dark:hover, a.text-dark:focus {
 .picker{
     margin-top: -10em;
 }
-.Buttonsubmit{
+.Buttonsubmittt{
     border-radius: 50%;
     width: 5em;
     height: 3em;
@@ -7227,14 +7227,14 @@ Button:hover{
     font-size: large;
     margin-top: 5em;
 }
-.lefttodo{
+.lefttt{
     height:10em;
     min-height: 6em;
     max-height: 15em;
     font-size: large;
     margin-top: -15em;
 }
-.buttonlabel{
+.buttonlabeltt{
     font-size: large;
     font-weight: bolder;
     font-family: "Dancing Script";
